@@ -1,3 +1,6 @@
+19 October 2016: Wouter
+	- Fix #1130: whitespace in example.conf.in more consistent.
+
 18 October 2016: Wouter
 	- Patch that resolves CNAMEs entered in local-data conf statements that
 	  point to data on the internet, from Jinmei Tatuya (Infoblox).
